kubeflow-deployments/private-blueprint/.build/istio/Base/IngressGateway/IngressGateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingressgateway
  namespace: istio-system
  labels:
    release: istio
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      name: http
      protocol: HTTP
      number: 80
    hosts:
    - "*"
    # Additional ports in gateaway for the ingressPorts - apps using dedicated port instead of hostname
---
apiVersion: networking.istio.io/v1alpha3
kind: Sidecar
metadata:
  name: default
  namespace: istio-system
  labels:
    release: istio
spec:
  egress:
  - hosts:
    - "*/*"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istio-ingressgateway
  namespace: istio-system
  labels:
    app: istio-ingressgateway
    istio: ingressgateway
    release: istio
spec:
  selector:
    matchLabels:
      app: istio-ingressgateway
      istio: ingressgateway
  template:
    metadata:
      labels:
        app: istio-ingressgateway
        chart: gateways
        heritage: Tiller
        istio: ingressgateway
        release: istio
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      serviceAccountName: istio-ingressgateway-service-account
      containers:
      - name: ingress-sds
        image: gcr.io/gke-release/asm/node-agent-k8s:1.4.7-asm.0
        resources:
          limits:
            cpu: 2000m
            memory: 1024Mi
          requests:
            cpu: 100m
            memory: 128Mi
        volumeMounts:
        - name: ingressgatewaysdsudspath
          mountPath: /var/run/ingress_gateway
        imagePullPolicy: IfNotPresent
      - name: istio-proxy
        image: gcr.io/gke-release/asm/proxyv2:1.4.7-asm.0
        args:
        - proxy
        - router
        - --domain
        - $(POD_NAMESPACE).svc.cluster.local
        - --proxyLogLevel=warning
        - --proxyComponentLogLevel=misc:error
        - --log_output_level=default:info
        - --drainDuration
        - 45s
        - --parentShutdownDuration
        - 1m0s
        - --connectTimeout
        - 10s
        - --serviceCluster
        - istio-ingressgateway
        - --zipkinAddress
        - zipkin.istio-system:9411
        - --proxyAdminPort
        - "15000"
        - --statusPort
        - "15020"
        - --stsPort=15463
        - --controlPlaneAuthPolicy
        - MUTUAL_TLS
        - --discoveryAddress
        - istio-pilot.istio-system:15011
        - --trust-domain=gcp-private-dev.svc.id.goog
        ports:
        - containerPort: 15020
        - containerPort: 80
        - containerPort: 443
        - containerPort: 15029
        - containerPort: 15030
        - containerPort: 15031
        - containerPort: 15032
        - containerPort: 15443
        - containerPort: 15011
        - containerPort: 8060
        - containerPort: 853
        - name: http-envoy-prom
          protocol: TCP
          containerPort: 15090
        resources:
          limits:
            cpu: 2000m
            memory: 1024Mi
          requests:
            cpu: 100m
            memory: 128Mi
        volumeMounts:
        - name: sdsudspath
          readOnly: true
          mountPath: /var/run/sds
        - name: istio-token
          mountPath: /var/run/secrets/tokens
        - name: ingressgatewaysdsudspath
          mountPath: /var/run/ingress_gateway
        - name: ingressgateway-certs
          readOnly: true
          mountPath: /etc/istio/ingressgateway-certs
        - name: ingressgateway-ca-certs
          readOnly: true
          mountPath: /etc/istio/ingressgateway-ca-certs
        readinessProbe:
          failureThreshold: 30
          httpGet:
            port: 15020
            path: /healthz/ready
            scheme: HTTP
          initialDelaySeconds: 1
          periodSeconds: 2
          successThreshold: 1
          timeoutSeconds: 1
        imagePullPolicy: IfNotPresent
      volumes:
      - name: ingressgatewaysdsudspath
        emptyDir: {}
      - name: sdsudspath
        hostPath:
          path: /var/run/sds
      - name: istio-token
        projected:
          sources:
          - serviceAccountToken:
              audience: gcp-private-dev.svc.id.goog
              expirationSeconds: 43200
              path: istio-token
      - name: ingressgateway-certs
        secret:
          optional: true
          secretName: istio-ingressgateway-certs
      - name: ingressgateway-ca-certs
        secret:
          optional: true
          secretName: istio-ingressgateway-ca-certs
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - preference:
              matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - amd64
            weight: 2
          - preference:
              matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - ppc64le
            weight: 2
          - preference:
              matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - s390x
            weight: 2
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - amd64
                - ppc64le
                - s390x
  strategy:
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 25%
